--- a/Views/Emprestimo/Cadastro.cshtml
+++ b/Views/Emprestimo/Cadastro.cshtml
@@ -14,18 +14,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="Emprestimo.Telefone">Telefone</label>
-                <input asp-for="Emprestimo.Telefone" class="form-control"/>
+                <input asp-for="Emprestimo.Telefone" class="form-control" />
             </div>
         </fieldset>
         <fieldset>
             <legend>Livro</legend>
             <div class="form-group">
                 <label asp-for="Emprestimo.DataEmprestimo">Data de Empréstimo</label>
-                <input type="date" asp-for="Emprestimo.DataEmprestimo" class="form-control"/>
+                <input type="date" asp-for="Emprestimo.DataEmprestimo" class="form-control" required/>
             </div>
             <div class="form-group">
                 <label asp-for="Emprestimo.DataDevolucao">Data de Devolução</label>
-                <input type="date" asp-for="Emprestimo.DataDevolucao" class="form-control"/>
+                <input type="date" asp-for="Emprestimo.DataDevolucao" class="form-control" required/>
             </div>
             <div class="form-group">
                 <label asp-for="Emprestimo.LivroId">Livro</label>
