--- a/Views/Livro/_FormCadastro.cshtml
+++ b/Views/Livro/_FormCadastro.cshtml
@@ -3,17 +3,17 @@
     <form asp-action="Cadastro" method="POST" class="col-md-4">
         <input type="hidden" asp-for="Id" />
         <div class="form-group">
-            <label asp-for="Titulo">Titulo</label>
-            <input asp-for="Titulo" class="form-control"/>
+            <label asp-for="Titulo">Título</label>
+            <input asp-for="Titulo" class="form-control"required/>
         </div>
         <div class="form-group">
-            <label asp-for="Autor">Ator</label>
-            <input asp-for="Autor" class="form-control"/>
+            <label asp-for="Autor">Autor</label>
+            <input asp-for="Autor" class="form-control"required/>
         </div>
         <div>
             <label asp-for="Ano">Ano</label>
-            <input asp-for="Ano" />
+            <input asp-for="Ano" required />
         </div>
-        <input type="submit" value="Salvar" class="btn btn-primary"/>
+        <input type="submit" value="Salvar" class="btn btn-primary"required/>
     </form>
 </div>
