--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -24,7 +24,7 @@
     <div class="col-md-12">
         <table > 
             <thead>
-                <tr><th>Id</th>
+                <tr><th>Id</th>UsuarioService
                 <th>Usuario</th>
                 <th>Data Empréstimo</th>
                 <th>Data Devolução</th>
